Closed Bug 1901042 Opened 2 years ago Closed 2 years ago

customElements.whenDefined gives useless error message ("invalid or illegal string")

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
129 Branch
Tracking Status
firefox129 --- fixed

People

(Reporter: freddy, Assigned: peterv)

Details

Attachments

(2 files)

customElements.define() has a proper explaination (invalid custom element name), customElements.whenDefined() says "illegal string".
Screenshot attached.

Assignee: nobody → peterv
Attachment #9406266 - Attachment description: WIP: Bug 1901042 - customElements.whenDefined gives useless error message ("invalid or illegal string"). r?#dom-core! → Bug 1901042 - customElements.whenDefined gives useless error message ("invalid or illegal string"). r?#dom-core!
Status: NEW → ASSIGNED
Severity: -- → S3
Pushed by pvanderbeken@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/faab42d548d7 customElements.whenDefined gives useless error message ("invalid or illegal string"). r=dom-core,avandolder
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: