Bug 1901042 - customElements.whenDefined gives useless error message ("invalid or illegal string"). r=dom-core,avandolder

Differential Revision: https://phabricator.services.mozilla.com/D212991